--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,14 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
+
+//Added from Le Wagon website:
+@import "avatar";
+@import "banner";
+@import "buttons";
+@import "cards";
+@import "footer";
+@import "messages";
+@import "navbar";
+@import "tabs";
+@import "upvote";
