adds colors and fonts

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,9 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+
+//custom
+$guided-white: #fdfdfd;
+$guided-blue: #000022;
+$guided-grey: #55556C;
+$guided-highlight: #E8E62D;
