--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Landmarks#index</h1>
-<p>Find me in app/views/landmarks/index.html.erb</p>
+<div class="container">
+  <h1>Landmarks#index</h1>
+  <div class="row">
+    <ul>
+      <% @landmarks.each do |landmark| %>
+      <div class="col-xs-12 col-md-6">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url( <%= landmark.image %>);">
+          <div class="card-description">
+            <h2>
+              <%= landmark.name %>
+            </h2>
+            <p>
+
+            </p>
+          </div>
+          <a class="card-link" href="#" ></a>
+        </div>
+      </div>
+      <% end %>
+    </ul>
+  </div>
+</div>
