Add stories to story page and home

--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Stories#index</h1>
-<p>Find me in app/views/stories/index.html.erb</p>
+<div class="container">
+<h1>All stories</h1>
+
+
+<%= render 'story_list', stories: @stories %>
+
+
+
+<!-- end of container -->
+</div>
+
