add partial for landmarks

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,6 +2,8 @@
 
 <div class="container">
 
+<h1>Browse landmarks</h1>
+<%= render 'landmarks/landmark_list', landmarks: @landmarks %>
 <h1>Top Stories</h1>
 <%= render 'stories/story_list', stories: @stories %>
 
