--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,21 +1,6 @@
 <div class="container">
   <h1>All Landmarks</h1>
-  <div class="row">
-    <% @landmarks.each do |landmark| %>
-    <%= link_to landmark_path(landmark) do %>
-    <div class="col-xs-12 col-md-6">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url( <%= landmark.image %>);">
-        <div class="card-description">
-          <h2>
-            <%= landmark.name %>
-          </h2>
-          <p>
 
-          </p>
-        </div>
-      </div>
-    </div>
-    <% end %>
-    <% end %>
-  </div>
+<%= render 'landmark_list', landmarks: @landmarks %>
+
 </div>
