--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content">
    <h1>Guided</h1>
    <p>Everyone is a storyteller</p>
-   <a class="btn btn-primary btn-lg">Start now</a>
+   <!-- <a class="btn btn-primary btn-lg">Start now</a> -->
  </div>
 </div>
 
