creates list of stories per landmark and appropriate links

--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -18,6 +18,9 @@
       <p>
         <%= @landmark.description %>
       </p>
+
+      <%= render 'stories/story_list', stories: @stories %>
+
     </div>
   </div>
 </div>
