--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -32,4 +32,7 @@
       </p>
     </div>
   </div>
+
+<%= link_to "Delete Story", story_path(@story), method: :delete, class: "btn btn-danger"%>
+
 </div>
