--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+      <div class="user-image" style="background-image:url('<%= image_path @users.image %>');"></div>
+    </div>
+    <div class="col-xs-12 col-md-9">
+      <div>
+
+      </div>
+    </div>
+  </div>
+</div>
