--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,7 +13,6 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
-
-// Stories Pages
 @import "stories/index";
 @import "landmarks/index";
+@import "users/index";
