--- a/app/assets/stylesheets/components/_story_list_item.scss
+++ b/app/assets/stylesheets/components/_story_list_item.scss
@@ -10,7 +10,8 @@
 
 /* Body design */
 .story-list-body {
-  flex: 1 1 auto;
+  flex: 1 3 auto;
+  // justify-content: space-between;
 }
 .story-list-body h3 {
   font-weight: bold;
@@ -101,6 +102,7 @@
 .story-link {
   display: flex;
   align-items: center;
+  flex-grow: 1;
 }
 
 .story-link:hover {
