--- a/app/views/shared/_map.html.erb
+++ b/app/views/shared/_map.html.erb
@@ -1,161 +1,161 @@
 <div id="map" style="width: 100%; height: 40vh;"></div>
 
 <% content_for(:after_js) do %>
-<%= javascript_tag do %>
-var handler = Gmaps.build('Google');
-var styles = [
-{
-  "featureType": "all",
-  "elementType": "labels",
-  "stylers": [
+<script>
+  var handler = Gmaps.build('Google');
+  var styles = [
   {
-    "visibility": "simplified"
-  }
-  ]
-},
-{
-  "featureType": "administrative.country",
-  "elementType": "geometry.stroke",
-  "stylers": [
-  {
-    "color": "#b1917b"
+    "featureType": "all",
+    "elementType": "labels",
+    "stylers": [
+    {
+      "visibility": "simplified"
+    }
+    ]
   },
   {
-    "weight": "0.76"
-  }
-  ]
-},
-{
-  "featureType": "administrative.country",
-  "elementType": "labels",
-  "stylers": [
+    "featureType": "administrative.country",
+    "elementType": "geometry.stroke",
+    "stylers": [
+    {
+      "color": "#b1917b"
+    },
+    {
+      "weight": "0.76"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "administrative.province",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "administrative.country",
+    "elementType": "labels",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "administrative.locality",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "administrative.province",
+    "elementType": "all",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "landscape",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "administrative.locality",
+    "elementType": "all",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "color": "#ece2cc"
-  }
-  ]
-},
-{
-  "featureType": "landscape",
-  "elementType": "labels",
-  "stylers": [
+    "featureType": "landscape",
+    "elementType": "all",
+    "stylers": [
+    {
+      "color": "#ece2cc"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "landscape.natural.terrain",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "landscape",
+    "elementType": "labels",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "color": "#c6b595"
-  }
-  ]
-},
-{
-  "featureType": "landscape.natural.terrain",
-  "elementType": "geometry.stroke",
-  "stylers": [
+    "featureType": "landscape.natural.terrain",
+    "elementType": "all",
+    "stylers": [
+    {
+      "color": "#c6b595"
+    }
+    ]
+  },
   {
-    "color": "#ff0000"
-  }
-  ]
-},
-{
-  "featureType": "poi",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "landscape.natural.terrain",
+    "elementType": "geometry.stroke",
+    "stylers": [
+    {
+      "color": "#ff0000"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "road",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "poi",
+    "elementType": "all",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "transit",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "road",
+    "elementType": "all",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "visibility": "off"
-  }
-  ]
-},
-{
-  "featureType": "water",
-  "elementType": "all",
-  "stylers": [
+    "featureType": "transit",
+    "elementType": "all",
+    "stylers": [
+    {
+      "visibility": "off"
+    }
+    ]
+  },
   {
-    "color": "#b8a386"
-  }
-  ]
-},
-{
-  "featureType": "water",
-  "elementType": "geometry.fill",
-  "stylers": [
+    "featureType": "water",
+    "elementType": "all",
+    "stylers": [
+    {
+      "color": "#b8a386"
+    }
+    ]
+  },
   {
-    "color": "#23686d"
-  }
-  ]
-},
-{
-  "featureType": "water",
-  "elementType": "labels",
-  "stylers": [
+    "featureType": "water",
+    "elementType": "geometry.fill",
+    "stylers": [
+    {
+      "color": "#23686d"
+    }
+    ]
+  },
   {
-    "color": "#ece2cc"
+    "featureType": "water",
+    "elementType": "labels",
+    "stylers": [
+    {
+      "color": "#ece2cc"
+    }
+    ]
   }
   ]
-}
-]
-handler.buildMap({
-provider: {
-styles: styles
-},
-internal: { id: 'map' } }, function() {
-markers = handler.addMarkers(<%= raw markers.to_json %>);
-handler.bounds.extendWith(markers);
-handler.fitMapToBounds();
-if (markers.length == 0) {
-handler.getMap().setZoom(2);
-} else if (markers.length == 1) {
-handler.getMap().setZoom(14);
-}
-});
-<% end %>
-<% end %>
+  handler.buildMap({
+    provider: {
+      styles: styles
+    },
+    internal: { id: 'map' } }, function() {
+      markers = handler.addMarkers(<%= raw markers.to_json %>);
+      handler.bounds.extendWith(markers);
+      handler.fitMapToBounds();
+      if (markers.length == 0) {
+        handler.getMap().setZoom(2);
+      } else if (markers.length == 1) {
+        handler.getMap().setZoom(14);
+      }
+    });
+  </script>
+  <% end %>
