--- a/app/views/stories/_story_list.html.erb
+++ b/app/views/stories/_story_list.html.erb
@@ -13,7 +13,8 @@
       </div>
   <% end %>
       <ul class="list-inline story-list-controls hidden-sm hidden-xs">
-        <li><a href=""><i class="fa fa-star"></i></a></li>
+        <li><%= audio_tag(cloudinary_url(story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: 'video'), controls: true) %></li>
+       <!--  <li><a href=""><i class="fa fa-star"></i></a></li> -->
       </ul>
     </div>
 <% end %>
