--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-3">
-      <div class="user-image" style="background-image:url('<%= image_path @users.image %>');"></div>
+      <div class="user-image" style="background-image:url('<%= image_path @user.image %>');"></div>
     </div>
     <div class="col-xs-12 col-md-9">
       <div>
-
+        <h1>
+        <%= @user.first_name + " " + @user.last_name %>
+        </h1>
       </div>
     </div>
   </div>
