--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -1,7 +1,7 @@
 .user-image {
+  margin: 0 auto;
   height: 200px;
   width: 200px;
   background-size: cover;
   border-radius: 50%;
-  margin: 10px;
 }
