--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <%= cl_image_tag("travel_holiday_vacation_3-29_gwxfx9.svg",
-      width: 200, height: 200, crop: :fill) %>
+    <%= image_tag("guided_icon.png", style: "height: 60px;") %>
+    <!-- <%= image_tag("guided.png") %> -->
   <% end %>
 
   <!-- Right Navigation -->
