--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,26 @@
-<%= render 'shared/banner', name: @landmark.name, image: @landmark.image, landmark: @landmark %>
+<%= render 'shared/banner' %>
 
 <div class="container">
-  <%= render 'shared/map', markers: @markers %>
 
+  <div>
+    <h2>Discover landmarks</h2>
+    <%= render 'landmarks/landmark_list', landmarks: @landmarks %>
+    <%= button_to "All landmarks", landmarks_path,
+   class: "btn btn-primary btn-lg", method: :get %>
+  </div>
 
-  <%= link_to "Show nearby stories", "#", id: "get_location", class: "btn btn-primary"%>
-  <h3>Stories</h3>
+  <div>
+    <h2>Discover Stories</h2>
+    <%= render 'stories/story_list', stories: @stories %>
+      <%= button_to "All Stories", stories_path,
+      class: "btn btn-primary btn-lg", method: :get %>
+    </div>
+  </div>
 
-  <%= render 'stories/story_list', stories: @landmark.stories %>
+  <div>
+    <%= render 'shared/map', markers: @markers %>
+    <%= button_to "Show nearby stories", "#", id: "get_location", class: "btn btn-primary"%>
+  </div>
 
 </div>
 
