Added create story button to landmark and user

--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -5,3 +5,12 @@
   background-size: cover;
   border-radius: 50%;
 }
+
+.story-upload-btn {
+  margin: 20px;
+  margin-top: 40px;
+}
+
+.text-align-center-div {
+  text-align: center;
+}
