--- a/app/views/stories/_story_list.html.erb
+++ b/app/views/stories/_story_list.html.erb
@@ -13,9 +13,11 @@
     </div>
     <% end %>
     <ul class="list-inline story-list-controls hidden-sm hidden-xs">
-      <li><%= audio_tag(cloudinary_url(story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: :video), controls: true) %></li>
-      <!--  <li><a href=""><i class="fa fa-star"></i></a></li> -->
-    </ul>
-  </div>
-  <% end %>
+      <% if story.audio.filename %>
+     <li><%= audio_tag(cloudinary_url(story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: :video), controls: true) %></li>
+     <% end %>
+     <!--  <li><a href=""><i class="fa fa-star"></i></a></li> -->
+   </ul>
+ </div>
+ <% end %>
 </div>
