--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -38,10 +38,13 @@
       </div>
 
       <div>
+        <% if @story.audio.filename %>
+
         <%= cl_image_tag(@story.audio.filename.sub(/\.[^.]+\z/, '.png'), height: 100, width: 300, flags: "waveform", resource_type: "video", color: "blue", background: "transparent") %>
 
 
         <%= audio_tag(cloudinary_url(@story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: :video), controls: true) %>
+        <% end %>
       </div>
     </div>
   </div>
