--- a/app/views/landmarks/index.html.erb
+++ b/app/views/landmarks/index.html.erb
@@ -1,3 +1,7 @@
+<%= render partial: 'shared/tiny_banner', locals: {
+  image: "https://i0.wp.com/behindthelenscap.smugmug.com/Amsterdam/i-gPrPZck/0/ecde89d7/L/Amsterdam-kade-2-L.jpg?resize=800%2C500&ssl=1"
+} %>
+
 <div class="container">
   <h1>All Landmarks</h1>
 
