--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,8 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon-wrapper">
   <!-- Logo -->
+  <div class="container">
+    <div class="navbar-wagon">
+
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag("guided_icon.png", style: "height: 60px;") %>
     <!-- <%= image_tag("guided.png") %> -->
@@ -49,5 +52,7 @@
       </ul>
     </div>
   </div>
+</div>
+</div>
 </div>
 
