--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -30,3 +30,9 @@
 //     <a class="btn btn-primary btn-lg">Start now</a>
 //   </div>
 // </div>
+
+.tiny-banner {
+  background-size: cover;
+  height: 25vh;
+  background-position: center;
+}
