--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -48,7 +48,7 @@
 }
 
 .landmark-card {
-  margin: 5px;
+  margin: 15px 0;
   box-shadow: 2px 2px 3px rgba(50, 50, 50, 0.8);
   border-radius: 3px;
 }
