--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,8 +2,15 @@
   <div class="banner-content">
    <%= image_tag 'guided.png' %>
    <p>Everyone is a storyteller</p>
-   <%= button_to "Discover Nearby Stories", landmarks_path,
-   class: "btn btn-primary btn-lg", method: :get %>
+   <%= button_to "Discover Nearby Stories", landmarks_path, class: "btn btn-primary btn-lg", id: "get_location", method: :get %>
  </div>
 </div>
 
+<%= content_for(:after_js) do %>
+<script>
+  $('#get_location').on("click", function(e) {
+    e.preventDefault();
+    getLocation();
+  });
+</script>
+<% end %>
