--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -4,10 +4,11 @@
   width: 200px;
   background-size: cover;
   border-radius: 50%;
+  background-position: center;
 }
 
 .story-upload-btn {
-  margin: 20px;
+  // margin: 20px;
   margin-top: 40px;
 }
 
