--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -26,6 +26,6 @@ $border-radius-small: 2px;
 // Override other variables below!
 $grid-gutter-width: 30px;
 
-// body {
-//   padding-top: 80px;
-// }
+body {
+ -webkit-font-smoothing: antialiased;
+}
