--- a/app/assets/stylesheets/landmarks/_show.scss
+++ b/app/assets/stylesheets/landmarks/_show.scss
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 40px;
 }
 .landmarkshow-banner h1 {
   font-size: 50px;
