--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -1,6 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
       <div class="landmarkshow-banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.1) 0%, rgba(0,36,61,0.1) 50%), url(<%= @landmark.image %>);">
         <div class="landmarkbanner-content">
           <h1>
@@ -8,24 +5,28 @@
           </h1>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+
 
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 landmarkshow-content">
+    <div class="col-xs-12 col-lg-6 landmarkshow-content">
       <p>
         <%= @landmark.description %>
       </p>
 
+
+
+       <%= button_to "Add a new story", new_story_path(landmark: @landmark.id), class: "btn btn-success story-upload-btn" %>
+
+    </div>
+    <div class="col-xs-12 col-lg-6">
+      <%= render 'shared/map', markers: @markers %>
+    </div>
+
+    <div class="col-xs-12">
+
       <%= render 'stories/story_list', stories: @stories %>
 
-      <div class="text-align-center-div">
-
-       <%= link_to "Add a new story", new_story_path(landmark: @landmark.id), class: "btn btn-success story-upload-btn" %>
-
-      </div>
     </div>
   </div>
 </div>
