--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,7 @@
+<%= render partial: 'shared/tiny_banner', locals: {
+  image: "https://i0.wp.com/behindthelenscap.smugmug.com/Amsterdam/i-gPrPZck/0/ecde89d7/L/Amsterdam-kade-2-L.jpg?resize=800%2C500&ssl=1"
+} %>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-3">
