Andy fixed some stuff

--- a/app/views/landmarks/show.html.erb
+++ b/app/views/landmarks/show.html.erb
@@ -16,7 +16,7 @@
 
 
 
-       <%= button_to "Add a new story", new_story_path(landmark: @landmark.id), class: "btn btn-success story-upload-btn" %>
+       <%= link_to "Add a new story", new_story_path(landmark: @landmark.id), class: "btn btn-success story-upload-btn" %>
 
     </div>
     <div class="col-xs-12 col-lg-6">
