--- a/app/assets/stylesheets/users/_show.scss
+++ b/app/assets/stylesheets/users/_show.scss
@@ -5,6 +5,8 @@
   background-size: cover;
   border-radius: 50%;
   background-position: center;
+  margin-top: 20px;
+  margin-left: 0px;
 }
 
 .story-upload-btn {
