adjustments to navbar on mobile

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -48,6 +48,10 @@
 .navbar-wagon-item {
   cursor: pointer;
   padding: 0 20px;
+  .fa-bars {
+    color: white;
+    font-size: 20px;
+  }
 }
 
 /* Navbar link */
