--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -8,6 +8,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  img {
+    max-width: 95vw;
+  }
 }
 .banner h1 {
   font-size: 50px;
