--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(247,129,84,0.0) 0%, rgba(242,193,78,0.0) 20%), url('https://static.pexels.com/photos/20967/pexels-photo.jpg');">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(247,129,84,0.0) 0%, rgba(242,193,78,0.0) 20%), url('<%= image_path 'banner.jpg' %>');">
   <div class="banner-content">
    <%= image_tag 'guided.png' %>
    <p>Everyone is a storyteller</p>
