fixes horizontal scroll

--- a/app/views/stories/_story_list.html.erb
+++ b/app/views/stories/_story_list.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <% stories.each do |story|%>
+  <div class="col-xs-12">
   <div class="story-list">
  <!--    <div class='story-list-upvote'>
       <div class="story-list-arrow"></div>
@@ -18,6 +19,7 @@
      <% end %>
      <!--  <li><a href=""><i class="fa fa-star"></i></a></li> -->
    </ul>
+ </div>
  </div>
  <% end %>
 </div>
