--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -2,7 +2,7 @@
   <div class="banner-content">
    <%= image_tag 'guided.png' %>
    <p>Everyone is a storyteller</p>
-   <%= link_to "Discover Nearby Stories", landmarks_path, class: "btn btn-primary btn-lg", id: "get_location" %>
+   <%= link_to "Discover Nearby Stories", nearest_landmark_path, class: "btn btn-primary btn-lg", id: "get_location" %>
  </div>
 </div>
 
