--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <meta property="og:description" content="Listen to audio stories about your current location, wherever you are. Done listening? Create and share your stories right on the website" />
   <meta property="og:type" content="Website" />
   <meta property="og:url" content="https://www.guided.club" />
-  <meta property="og:image" content="https://res.cloudinary.com/dieter/image/upload/v1511798620/Guided_zkhocb.png" />
+  <meta property="og:image" content="https://res.cloudinary.com/dieter/image/upload/v1511799920/Guided1200_eg4hfg.jpg" />
 </head>
 
 <body>
