--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,20 +10,28 @@
     <div class="col-xs-12 col-md-9">
       <div>
         <h1>
+          <% if @user.first_name != nil && @user.last_name != nil %>
           <%= @user.first_name + " " + @user.last_name %>
+          <% end %>
         </h1>
       </div>
       <div>
+        <%  if @user.city != nil %>
         <strong>City: </strong><%= @user.city %>
+        <% end %>
       </div>
       <div>
+        <%  if @user.description != nil %>
         <%= @user.description %>
+        <% end %>
       </div>
     </div>
   </div>
   <div>
+    <%  if @user.first_name != nil %>
     <h3>Stories by <%= @user.first_name %></h3>
   <%= render 'stories/story_list', stories: @stories %>
+    <% end %>
 <div class="text-align-center-div">
 
   <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
