finished user update form

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -7,6 +7,17 @@
   border-radius: 2px;
 }
 
+.user-update-form-container {
+  max-width: 500px;
+  margin: 50px auto;
+  margin-top: -50px;
+  margin-bottom: 200px;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 2px 2px 4px rgba(1,1,1,0.3);
+  border-radius: 2px;
+}
+
 
 .background-image {
   position: fixed;
