--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -33,7 +33,8 @@
   <%= render 'stories/story_list', stories: @stories %>
     <% end %>
 <div class="text-align-center-div">
-
+  <%= link_to "Update user info", edit_user_path, class: "btn btn-primary"  %>
+<%= link_to "Update email and password", edit_user_registration_path, class: "btn btn-danger"  %>
   <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
 </div>
   </div>
