--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,15 @@
+<!-- Navbar -->
 <%= render partial: 'shared/tiny_banner', locals: {
-  image: "https://i0.wp.com/behindthelenscap.smugmug.com/Amsterdam/i-gPrPZck/0/ecde89d7/L/Amsterdam-kade-2-L.jpg?resize=800%2C500&ssl=1"
+  image: ""
 } %>
 
+<!-- Background image -->
+<% link = ['https://static.pexels.com/photos/15286/pexels-photo.jpg', 'https://static.pexels.com/photos/374710/pexels-photo-374710.jpeg', 'https://static.pexels.com/photos/572688/pexels-photo-572688.jpeg', 'https://static.pexels.com/photos/52599/pexels-photo-52599.jpeg'].sample %>
+<div class="background-image" style="background-image:url(<%=link%>);"></div>
+
+
+<!-- Input form -->
+<div class="user-update-form-container">
 <div class="devise-form">
 
 <h2>Sign up</h2>
@@ -10,6 +18,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+    <%= f.input :first_name, required: true, autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
@@ -21,4 +30,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
 </div>
