--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,8 +6,6 @@
   <div class="row">
     <div class="col-xs-12 col-md-3">
       <div class="user-image" style="background-image:url('<%= image_path @user.image %>');"></div>
-    </div>
-    <div class="col-xs-12 col-md-9">
       <div>
         <h1>
           <% if @user.first_name != nil && @user.last_name != nil %>
@@ -24,20 +22,29 @@
         <%  if @user.description != nil %>
         <%= @user.description %>
         <% end %>
+        <br>
       </div>
+
+        <%= link_to "Update user info", edit_user_registration_path, class: "btn btn-danger"  %>
+        <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
+    </div>
+    <div class="col-xs-12 col-md-9">
+
+      <!-- Stories: -->
+      <div>
+        <%  if @user.first_name != nil %>
+        <h3>Stories by <%= @user.first_name %></h3>
+        <%= render 'stories/story_list', stories: @stories %>
+        <% end %>
+
+      </div>
+      <div class="text-align-center-div">
+      </div>
+
+
     </div>
   </div>
-  <div>
-    <%  if @user.first_name != nil %>
-    <h3>Stories by <%= @user.first_name %></h3>
-  <%= render 'stories/story_list', stories: @stories %>
-    <% end %>
-<div class="text-align-center-div">
-  <%= link_to "Update user info", edit_user_path, class: "btn btn-primary"  %>
-<%= link_to "Update email and password", edit_user_registration_path, class: "btn btn-danger"  %>
-  <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
-</div>
-  </div>
+
 </div>
 
 
