--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -13,19 +13,19 @@
         <%= @story.description %>
       </div>
       <div>
-        <strong>Created by: </strong>
+        <i class="fa fa-user" aria-hidden="true"></i>
         <%= link_to user_path(@story.user) do %>
         <%= @story.user.first_name + " " + @story.user.last_name %>
         <% end %>
       </div>
       <div>
-        <strong>Language: </strong><%= @story.language %>
+        <i class="fa fa-globe" aria-hidden="true"></i><%= @story.language %>
       </div>
       <div>
-        <strong>Category: </strong><%= @story.category %>
+        <i class="fa fa-tag" aria-hidden="true"></i><%= @story.category %>
       </div>
       <div>
-        <strong>Landmark: </strong>
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
           <%= link_to landmark_path(@story.landmark) do %>
             <%= @story.landmark.name %>
           <% end %>
