--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,9 @@
   <%= render 'shared/navbar' %>
   <%= render 'shared/flashes' %>
 
+<div class="all-content-yielded">
   <%= yield %>
+  </div>
 
   <%= render 'shared/footer' %>
 
