--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -31,3 +31,26 @@
 // HTML:
 // <a href="#" class="btn-medium">Write a story</a>
 // <a href="#" class="btn-treehouse">Start now</a>
+
+.trash-button {
+  z-index: 9999999;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: $red;
+  border: none;
+  width: 50px;
+  height: 50px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: transform 200ms ease;
+  &:hover {
+      transform: scale(1.05);
+    color: white;
+    text-decoration: none;
+  }
+}
