--- a/app/views/stories/_story_list.html.erb
+++ b/app/views/stories/_story_list.html.erb
@@ -2,28 +2,33 @@
   <% stories.each do |story|%>
   <div class="col-xs-12">
     <div class="story-list">
- <!--    <div class='story-list-upvote'>
-      <div class="story-list-arrow"></div>
-      <div class='story-list-count'>0</div>
-    </div> -->
-    <div class='story-list-top'>
-    <%= link_to story_path(story), class:"story-link" do %>
-      <%= cl_image_tag(story.image, class: "story-list-image hidden-xs") %>
-      <div class='story-list-body'>
-        <h3><%= story.title %></h3>
-        <p><%= story.description %></p>
-      </div>
-      <% end %>
-    </div>
-    <div class="story-list-player">
-      <ul class="story-list-controls">
-        <% if story.audio.filename %>
-        <%= audio_tag(cloudinary_url(story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: :video), controls: true) %>
+      <div class='story-list-top'>
+        <%= link_to story_path(story), class:"story-link" do %>
+        <%= cl_image_tag(story.image, class: "story-list-image hidden-xs") %>
+        <div class='story-list-body'>
+          <h3><%= story.title %></h3>
+          <p><%= story.description %></p>
+        </div>
         <% end %>
-        <!--  <li><a href=""><i class="fa fa-star"></i></a></li> -->
-      </ul>
+      <div class='story-list-upvote'>
+        <%= link_to like_story_path(story), method: :put do %>
+        <div class="story-list-arrow"></div>
+        <div class='story-list-count'><%= story.votes_for.size  %></div>
+        <% end %>
+      </div>
+      </div>
+      <div class="story-list-player">
+        <ul class="story-list-controls">
+          <% if story.audio.filename %>
+          <%= audio_tag(cloudinary_url(story.audio.filename.sub(/\.[^.]+\z/, '.mp3'), resource_type: :video), controls: true) %>
+          <% end %>
+        <!--   <li><a href=""><i class="fa fa-star"></i></a></li> -->
+        </ul>
+      </div>
     </div>
   </div>
+  <% end %>
 </div>
-<% end %>
-</div>
+
+
+
