--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,7 +11,7 @@
 @import "messages";
 @import "navbar";
 @import "tabs";
-@import "upvote";
+// @import "upvote";
 @import "story_list_item";
 @import "form";
 @import "utilities";
