--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,8 +25,11 @@
         <br>
       </div>
 
-        <%= link_to "Update user info", edit_user_registration_path, class: "btn btn-danger"  %>
-        <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
+      <%= link_to "Update user info", edit_user_registration_path, class: "btn btn-danger"  %>
+      <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
+      <%= link_to follow_user_path(@user), method: :put do %>
+      <i class="fa fa-2x fa-star"></i>
+      <% end %>
     </div>
     <div class="col-xs-12 col-md-9">
 
@@ -38,7 +41,21 @@
         <% end %>
 
       </div>
-      <div class="text-align-center-div">
+      <div>
+        <div>
+          <h3>Landmarks followed</h3>
+          <%= render 'landmarks/landmark_list', landmarks: @user.following_by_type('Landmark') %>
+        </div>
+        <div>
+          <h3>Users followed</h3>
+
+
+          <% @user.following_by_type('User').each do |user| %>
+              <%= link_to user_path(user) do %>
+              <%= user.first_name + " " + user.last_name %>
+            <% end %>
+          <% end %>
+        </div>
       </div>
 
 
