adds feature where users can follow other users or landmarks and displays these followed objects on user#show view

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -53,6 +53,28 @@
   border-radius: 3px;
 }
 
+.landmark-follow-star {
+  position: absolute;
+  margin: 0 auto;
+  right: 25px;
+  top: 25px;
+  color: white;
+  text-shadow: 2px 2px 10px black;
+  font-size: 1.5em;
+  a {
+    color: white;
+    &:hover {
+      color: gold;
+    }
+  }
+  .following-star {
+    color: yellow;
+    &:hover{
+      color: gold;
+    }
+  }
+}
+
 // HTML:
 // <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
 //   <div class="card-category">Popular</div>
