--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,8 +27,16 @@
 
       <%= link_to "Update user info", edit_user_registration_path, class: "btn btn-danger"  %>
       <%= link_to "Upload a new story", new_story_path, class: "btn btn-success story-upload-btn" %>
-      <%= link_to follow_user_path(@user), method: :put do %>
-      <i class="fa fa-2x fa-star"></i>
+      <% unless current_user.id == @user.id %>
+      <div class="user-follow-star">
+        <%= link_to follow_user_path(@user), method: :put, remote: true do %>
+        <% if current_user.following?(@user) %>
+        <i class="fa fa-fw fa-star following-star" data-id='<%= @user.id %>'></i>
+        <% else %>
+        <i class="fa fa-fw fa-star" data-id='<%= @user.id %>'></i>
+        <% end %>
+        <% end %>
+      </div>
       <% end %>
     </div>
     <div class="col-xs-12 col-md-9">
@@ -51,9 +59,9 @@
 
 
           <% @user.following_by_type('User').each do |user| %>
-              <%= link_to user_path(user) do %>
-              <%= user.first_name + " " + user.last_name %>
-            <% end %>
+          <%= link_to user_path(user) do %>
+          <%= user.first_name + " " + user.last_name %>
+          <% end %>
           <% end %>
         </div>
       </div>
