changes color of follow-stars

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -64,13 +64,13 @@
   a {
     color: white;
     &:hover {
-      color: gold;
+      color: $red;
     }
   }
   .following-star {
-    color: yellow;
+    color: $orange;
     &:hover{
-      color: gold;
+      color: $red;
     }
   }
 }
